--- a/CSS/category.css
+++ b/CSS/category.css
@@ -4,99 +4,40 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.wrapper {
-  margin-top: 5vh;
-}
-.dataTables_filter {
-  float: right;
-}
-.table-hover > tbody > tr:hover {
-  background-color: #ff9933;
-}
-.table {
-  @media only screen and (min-width: 768px) {
-    table-layout: fixed;
-    max-width: 100% !important;
-  }
-}
-thead {
-  background: #ddd;
-}
-.table td:nth-child(2) {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.highlight {
-  background: lighten(yellow, 30%);
+* {
+  box-sizing: border-box;
 }
 
-@media only screen and (max-width: 767px) {
-  table,
-  thead,
-  tbody,
-  th,
-  td,
-  tr {
-    display: block;
-  }
-  thead tr,
-  tfoot tr {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-  }
-  td {
-    /* Behave  like a "row" */
-    border: none;
-    border-bottom: 1px solid #eee;
-    position: relative;
-    padding-left: 50% !important;
-  }
-  td:before {
-    /* Now like a table header */
-    position: absolute;
-    /* Top/left values mimic padding */
-    top: 6px;
-    left: 6px;
-    width: 45%;
-    padding-right: 10px;
-    white-space: nowrap;
-  }
+#judet {
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
 
-  .table td:nth-child(1) {
-    background: #ccc;
-    height: 100%;
-    top: 0;
-    left: 0;
-    font-weight: bold;
-  }
-  /*
-      Label the data
-      */
-  td:nth-of-type(1):before {
-    content: "Nume Stapan";
-  }
-  td:nth-of-type(2):before {
-    content: "Nume Animal";
-  }
-  td:nth-of-type(3):before {
-    content: "Judet";
-  }
-  td:nth-of-type(4):before {
-    content: "Varsta";
-  }
-  td:nth-of-type(5):before {
-    content: "Rasa";
-  }
-  td:nth-of-type(6):before {
-    content: "Culoare";
-  }
-  td:nth-of-type(7):before {
-    content: "Numar Tel";
-  }
-  .dataTables_length {
-    display: none;
-  }
+#category_table {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #ddd;
+  font-size: 18px;
+}
+
+#category_table th,
+#category_table td {
+  text-align: left;
+  padding: 12px;
+}
+
+#category_table tr {
+  border-bottom: 1px solid #ddd;
+}
+
+#category_table tr.header,
+#category_table tr:hover {
+  background-color: #f1f1f1;
 }
 
 footer {
@@ -118,10 +59,10 @@ footer p {
   background-color: #fff;
   box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
   position: fixed;
-  margin-top: -40px;
+  margin-left: 0px;
+  margin-top: -10px;
   width: 100%;
   z-index: 3;
-  font-size: 16px;
   font-family: Helvetica, sans-serif;
 }
 .header .a {
@@ -136,10 +77,12 @@ footer p {
 }
 .header li a {
   display: block;
+  margin-top: 8px;
   padding: 20px 20px;
   border-right: 1px solid #f4f4f4;
   text-decoration: none;
   color: #000;
+  font-size: 16px;
 }
 .header li a:hover,
 .header .menu-btn:hover {
@@ -148,7 +91,8 @@ footer p {
 .header .logo {
   display: block;
   float: left;
-  font-size: 2em;
+  margin-top: 5px;
+  font-size: 2.3em;
   padding: 10px 20px;
   text-decoration: none;
 }
